--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <input type="tel" id="tel">
         </li>
         <li>
-            <label for="date">배송 지정</label>
+            <label for="date">배송</label>
             <input type="date" id="date"><small>(주문일로부터 최소 3일 이후)</small>
         </li>
         <li>
