--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div id="container" style="width: 480px; margin: 40px auto;">
-<h1>유림이의 사랑 주문하기</h1>
+<h1>유림이의 사랑 주문하기♡</h1>
 <fieldset>
     <legend>배송 정보</legend>
     <ul id="shipping">
@@ -24,7 +24,7 @@
         </li>
         <li>
             <label for="date">배송</label>
-            <input type="date" id="date"><small>(주문일로부터 최소 3일 이후)</small>
+            <input type="date" id="date"><small>(주문일로부터 3일 이후)</small>
         </li>
         <li>
             <label for="memo">메모</label>
